Armature layers not indicating the existence of bones #76689

Closed
opened 2020-05-12 16:54:29 +02:00 by Germano Cavalcante · 7 comments

Blender Version
Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-04 06:23, hash: 000fdd8a6e
Worked: version: 2.79

Short description of error
When adding bones the indication of the layers it is included (that circle) in is not updated.

Exact steps for others to reproduce the error

  • In the initial scene delete all objects
  • Add an object of type "Armature"
    Note that although there are bones, the Armature layers do not indicate this.
**Blender Version** Broken: version: 2.83 (sub 15), branch: master, commit date: 2020-05-04 06:23, hash: `000fdd8a6e` Worked: version: 2.79 **Short description of error** When adding bones the indication of the layers it is included (that circle) in is not updated. **Exact steps for others to reproduce the error** - In the initial scene delete all objects - Add an object of type "Armature" Note that although there are bones, the Armature layers do not indicate this.
Author
Member

Added subscriber: @mano-wii

Added subscriber: @mano-wii

#76590 was marked as duplicate of this issue

#76590 was marked as duplicate of this issue
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscriber: @MeshVoid

Added subscriber: @MeshVoid
Sybren A. Stüvel self-assigned this 2020-05-12 17:04:03 +02:00

This issue was referenced by 291136eece

This issue was referenced by 291136eecea31c13232054accc2663dcdf7b2a33

Added subscriber: @AlfredTsaizer

Added subscriber: @AlfredTsaizer

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76689
No description provided.